--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
 <embed src = 'example80.svg' type='image/svg+xml'></embed>
 <embed src = 'example81.svg' type='image/svg+xml'></embed>
 <embed src = 'example82.svg' type='image/svg+xml'></embed>
+<embed src = 'jgbyields_p1.svg' type='image/svg+xml'></embed>
+<embed src = 'jgbyields_p2.svg' type='image/svg+xml'></embed>
+<embed src = 'jgbyields_p3.svg' type='image/svg+xml'></embed>
 <embed src = 'testlatticepaneldemo.svg' type='image/svg+xml'></embed>
 </body>
   </html>
