add more test of examples in latticeExtra documentation

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <head></head>
   <body>
   <h1>Some gridSVG tests</h1>
+<embed src = 'd3test.svg' type='image/svg+xml'></embed>
 <embed src = 'example11.svg' type='image/svg+xml'></embed>
 <embed src = 'example13.svg' type='image/svg+xml'></embed>
 <embed src = 'example17.svg' type='image/svg+xml'></embed>
@@ -31,6 +32,50 @@
 <embed src = 'jgbyields_p1.svg' type='image/svg+xml'></embed>
 <embed src = 'jgbyields_p2.svg' type='image/svg+xml'></embed>
 <embed src = 'jgbyields_p3.svg' type='image/svg+xml'></embed>
+<embed src = 'testctrellis1.svg' type='image/svg+xml'></embed>
+<embed src = 'testctrellis10.svg' type='image/svg+xml'></embed>
+<embed src = 'testctrellis11.svg' type='image/svg+xml'></embed>
+<embed src = 'testctrellis2.svg' type='image/svg+xml'></embed>
+<embed src = 'testctrellis3.svg' type='image/svg+xml'></embed>
+<embed src = 'testctrellis4.svg' type='image/svg+xml'></embed>
+<embed src = 'testctrellis5.svg' type='image/svg+xml'></embed>
+<embed src = 'testctrellis6.svg' type='image/svg+xml'></embed>
+<embed src = 'testctrellis7.svg' type='image/svg+xml'></embed>
+<embed src = 'testctrellis8.svg' type='image/svg+xml'></embed>
+<embed src = 'testctrellis9.svg' type='image/svg+xml'></embed>
+<embed src = 'testglayer1.svg' type='image/svg+xml'></embed>
+<embed src = 'testglayer10.svg' type='image/svg+xml'></embed>
+<embed src = 'testglayer11.svg' type='image/svg+xml'></embed>
+<embed src = 'testglayer12.svg' type='image/svg+xml'></embed>
+<embed src = 'testglayer13.svg' type='image/svg+xml'></embed>
+<embed src = 'testglayer2.svg' type='image/svg+xml'></embed>
+<embed src = 'testglayer3.svg' type='image/svg+xml'></embed>
+<embed src = 'testglayer4.svg' type='image/svg+xml'></embed>
+<embed src = 'testglayer5.svg' type='image/svg+xml'></embed>
+<embed src = 'testglayer6.svg' type='image/svg+xml'></embed>
+<embed src = 'testglayer7.svg' type='image/svg+xml'></embed>
+<embed src = 'testglayer8.svg' type='image/svg+xml'></embed>
+<embed src = 'testglayer9.svg' type='image/svg+xml'></embed>
+<embed src = 'testlatggplt1.svg' type='image/svg+xml'></embed>
+<embed src = 'testlatggplt2.svg' type='image/svg+xml'></embed>
+<embed src = 'testlatggplt3.svg' type='image/svg+xml'></embed>
+<embed src = 'testlatggplt4.svg' type='image/svg+xml'></embed>
+<embed src = 'testlatggplt6.svg' type='image/svg+xml'></embed>
+<embed src = 'testlatggplt7.svg' type='image/svg+xml'></embed>
+<embed src = 'testlatggplt8.svg' type='image/svg+xml'></embed>
 <embed src = 'testlatticepaneldemo.svg' type='image/svg+xml'></embed>
+<embed src = 'testparams.svg' type='image/svg+xml'></embed>
+<embed src = 'testsegplot1.svg' type='image/svg+xml'></embed>
+<embed src = 'testsegplot2.svg' type='image/svg+xml'></embed>
+<embed src = 'testsegplot3.svg' type='image/svg+xml'></embed>
+<embed src = 'testsegplot4.svg' type='image/svg+xml'></embed>
+<embed src = 'testsegplot5.svg' type='image/svg+xml'></embed>
+<embed src = 'testtskernel1.svg' type='image/svg+xml'></embed>
+<embed src = 'testtskernel2.svg' type='image/svg+xml'></embed>
+<embed src = 'testtskernel3.svg' type='image/svg+xml'></embed>
+<embed src = 'testtskernel4.svg' type='image/svg+xml'></embed>
+<embed src = 'testvoronoi1.svg' type='image/svg+xml'></embed>
+<embed src = 'testvoronoi2.svg' type='image/svg+xml'></embed>
+<embed src = 'testvoronoi3.svg' type='image/svg+xml'></embed>
 </body>
   </html>
